parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> var_dec
Rule 5     statement -> if_statement
Rule 6     statement -> ifel_statement
Rule 7     statement -> wh_statement
Rule 8     statement -> ip_statement
Rule 9     statement -> pr_statement
Rule 10    statement -> assign_expr
Rule 11    statement -> arr_push
Rule 12    statement -> arr_print
Rule 13    statement -> new_line
Rule 14    assign_expr -> NAME ASSIGN expression
Rule 15    var_dec -> var_dec_st
Rule 16    var_dec -> var_dec_in
Rule 17    var_dec -> var_dec_fl
Rule 18    var_dec -> arr_dec
Rule 19    var_dec_st -> NAME ASSIGN STRINGDEC STRING
Rule 20    var_dec_in -> NAME ASSIGN INTDEC expression
Rule 21    var_dec_fl -> NAME ASSIGN FLOATDEC expression
Rule 22    arr_dec -> NAME ASSIGN LBRACKET arr_param RBRACKET
Rule 23    arr_dec -> NAME ASSIGN LBRACKET RBRACKET
Rule 24    arr_param -> arr_param COMMA arr_thing
Rule 25    arr_param -> arr_thing
Rule 26    arr_thing -> STRING
Rule 27    arr_thing -> expression
Rule 28    ip_statement -> INPUTDEC NAME
Rule 29    pr_statement -> PRINT outputblock ENDPRINT
Rule 30    new_line -> NEWLINE
Rule 31    outputblock -> outputblock expression
Rule 32    outputblock -> outputblock STRING
Rule 33    outputblock -> outputblock comparison
Rule 34    outputblock -> outputblock LZDIGIT
Rule 35    outputblock -> expression
Rule 36    outputblock -> STRING
Rule 37    outputblock -> comparison
Rule 38    outputblock -> LZDIGIT
Rule 39    if_statement -> IF LBRACKET comparison RBRACKET statements ENDIF
Rule 40    ifel_statement -> IF LBRACKET comparison RBRACKET statements ENDIF ELSE statements ENDELSE
Rule 41    wh_statement -> WHILE LBRACKET comparison RBRACKET statements ENDWHILE
Rule 42    comparison -> arr_empty
Rule 43    comparison -> LBRACKET comparison RBRACKET
Rule 44    comparison -> expression EQUALS expression
Rule 45    comparison -> expression NOTEQ expression
Rule 46    comparison -> expression GREATER expression
Rule 47    comparison -> expression LESS expression
Rule 48    comparison -> expression GREATEREQ expression
Rule 49    comparison -> expression LESSEQ expression
Rule 50    comparison -> comparison AND comparison
Rule 51    comparison -> comparison OR comparison
Rule 52    comparison -> NOT comparison
Rule 53    expression -> expression PLUS expression
Rule 54    expression -> expression MINUS expression
Rule 55    expression -> expression TIMES expression
Rule 56    expression -> expression FDIVIDE expression
Rule 57    expression -> expression DIVIDE expression
Rule 58    expression -> expression MODULO expression
Rule 59    expression -> expression POWER expression
Rule 60    expression -> LPAREN expression RPAREN
Rule 61    expression -> MINUS expression
Rule 62    expression -> INT
Rule 63    expression -> FLOAT
Rule 64    expression -> LZWORD
Rule 65    expression -> NAME
Rule 66    expression -> NAME LBRACKET expression RBRACKET
Rule 67    arr_push -> PUSH NAME expression ENDPUSH
Rule 68    arr_print -> PRINTARRAY NAME
Rule 69    expression -> POP NAME
Rule 70    expression -> TOP NAME
Rule 71    arr_empty -> ISEMPTY NAME
Rule 72    expression -> ARRLEN NAME
Rule 73    statement -> NAME LBRACKET expression RBRACKET ASSIGN expression

Terminals, with rules where they appear

AND                  : 50
ARRLEN               : 72
ASSIGN               : 14 19 20 21 22 23 73
COMMA                : 24
COMMENT              : 
DIVIDE               : 57
ELSE                 : 40
ENDELSE              : 40
ENDIF                : 39 40
ENDPRINT             : 29
ENDPUSH              : 67
ENDWHILE             : 41
EQUALS               : 44
FDIVIDE              : 56
FLOAT                : 63
FLOATDEC             : 21
GREATER              : 46
GREATEREQ            : 48
IF                   : 39 40
INPUTDEC             : 28
INT                  : 62
INTDEC               : 20
ISEMPTY              : 71
LBRACKET             : 22 23 39 40 41 43 66 73
LESS                 : 47
LESSEQ               : 49
LPAREN               : 60
LZDIGIT              : 34 38
LZWORD               : 64
MINUS                : 54 61
MODULO               : 58
NAME                 : 14 19 20 21 22 23 28 65 66 67 68 69 70 71 72 73
NEWLINE              : 30
NOT                  : 52
NOTEQ                : 45
OR                   : 51
PLUS                 : 53
POP                  : 69
POWER                : 59
PRINT                : 29
PRINTARRAY           : 68
PUSH                 : 67
RBRACKET             : 22 23 39 40 41 43 66 73
RPAREN               : 60
STRING               : 19 26 32 36
STRINGDEC            : 19
TIMES                : 55
TOP                  : 70
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

arr_dec              : 18
arr_empty            : 42
arr_param            : 22 24
arr_print            : 12
arr_push             : 11
arr_thing            : 24 25
assign_expr          : 10
comparison           : 33 37 39 40 41 43 50 50 51 51 52
expression           : 14 20 21 27 31 35 44 44 45 45 46 46 47 47 48 48 49 49 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 66 67 73 73
if_statement         : 5
ifel_statement       : 6
ip_statement         : 8
new_line             : 13
outputblock          : 29 31 32 33 34
pr_statement         : 9
start                : 0
statement            : 2 3
statements           : 1 2 39 40 40 41
var_dec              : 4
var_dec_fl           : 17
var_dec_in           : 16
var_dec_st           : 15
wh_statement         : 7

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . var_dec
    (5) statement -> . if_statement
    (6) statement -> . ifel_statement
    (7) statement -> . wh_statement
    (8) statement -> . ip_statement
    (9) statement -> . pr_statement
    (10) statement -> . assign_expr
    (11) statement -> . arr_push
    (12) statement -> . arr_print
    (13) statement -> . new_line
    (73) statement -> . NAME LBRACKET expression RBRACKET ASSIGN expression
    (15) var_dec -> . var_dec_st
    (16) var_dec -> . var_dec_in
    (17) var_dec -> . var_dec_fl
    (18) var_dec -> . arr_dec
    (39) if_statement -> . IF LBRACKET comparison RBRACKET statements ENDIF
    (40) ifel_statement -> . IF LBRACKET comparison RBRACKET statements ENDIF ELSE statements ENDELSE
    (41) wh_statement -> . WHILE LBRACKET comparison RBRACKET statements ENDWHILE
    (28) ip_statement -> . INPUTDEC NAME
    (29) pr_statement -> . PRINT outputblock ENDPRINT
    (14) assign_expr -> . NAME ASSIGN expression
    (67) arr_push -> . PUSH NAME expression ENDPUSH
    (68) arr_print -> . PRINTARRAY NAME
    (30) new_line -> . NEWLINE
    (19) var_dec_st -> . NAME ASSIGN STRINGDEC STRING
    (20) var_dec_in -> . NAME ASSIGN INTDEC expression
    (21) var_dec_fl -> . NAME ASSIGN FLOATDEC expression
    (22) arr_dec -> . NAME ASSIGN LBRACKET arr_param RBRACKET
    (23) arr_dec -> . NAME ASSIGN LBRACKET RBRACKET

    NAME            shift and go to state 22
    IF              shift and go to state 21
    WHILE           shift and go to state 5
    INPUTDEC        shift and go to state 6
    PRINT           shift and go to state 4
    PUSH            shift and go to state 16
    PRINTARRAY      shift and go to state 24
    NEWLINE         shift and go to state 11

    new_line                       shift and go to state 20
    statements                     shift and go to state 1
    var_dec_in                     shift and go to state 23
    ifel_statement                 shift and go to state 18
    arr_push                       shift and go to state 2
    var_dec                        shift and go to state 10
    wh_statement                   shift and go to state 3
    pr_statement                   shift and go to state 19
    var_dec_fl                     shift and go to state 12
    arr_dec                        shift and go to state 25
    start                          shift and go to state 13
    assign_expr                    shift and go to state 14
    statement                      shift and go to state 15
    arr_print                      shift and go to state 7
    var_dec_st                     shift and go to state 8
    if_statement                   shift and go to state 17
    ip_statement                   shift and go to state 9

state 1

    (1) start -> statements .
    (2) statements -> statements . statement
    (4) statement -> . var_dec
    (5) statement -> . if_statement
    (6) statement -> . ifel_statement
    (7) statement -> . wh_statement
    (8) statement -> . ip_statement
    (9) statement -> . pr_statement
    (10) statement -> . assign_expr
    (11) statement -> . arr_push
    (12) statement -> . arr_print
    (13) statement -> . new_line
    (73) statement -> . NAME LBRACKET expression RBRACKET ASSIGN expression
    (15) var_dec -> . var_dec_st
    (16) var_dec -> . var_dec_in
    (17) var_dec -> . var_dec_fl
    (18) var_dec -> . arr_dec
    (39) if_statement -> . IF LBRACKET comparison RBRACKET statements ENDIF
    (40) ifel_statement -> . IF LBRACKET comparison RBRACKET statements ENDIF ELSE statements ENDELSE
    (41) wh_statement -> . WHILE LBRACKET comparison RBRACKET statements ENDWHILE
    (28) ip_statement -> . INPUTDEC NAME
    (29) pr_statement -> . PRINT outputblock ENDPRINT
    (14) assign_expr -> . NAME ASSIGN expression
    (67) arr_push -> . PUSH NAME expression ENDPUSH
    (68) arr_print -> . PRINTARRAY NAME
    (30) new_line -> . NEWLINE
    (19) var_dec_st -> . NAME ASSIGN STRINGDEC STRING
    (20) var_dec_in -> . NAME ASSIGN INTDEC expression
    (21) var_dec_fl -> . NAME ASSIGN FLOATDEC expression
    (22) arr_dec -> . NAME ASSIGN LBRACKET arr_param RBRACKET
    (23) arr_dec -> . NAME ASSIGN LBRACKET RBRACKET

    $end            reduce using rule 1 (start -> statements .)
    NAME            shift and go to state 22
    IF              shift and go to state 21
    WHILE           shift and go to state 5
    INPUTDEC        shift and go to state 6
    PRINT           shift and go to state 4
    PUSH            shift and go to state 16
    PRINTARRAY      shift and go to state 24
    NEWLINE         shift and go to state 11

    new_line                       shift and go to state 20
    var_dec_in                     shift and go to state 23
    ifel_statement                 shift and go to state 18
    arr_push                       shift and go to state 2
    var_dec                        shift and go to state 10
    wh_statement                   shift and go to state 3
    pr_statement                   shift and go to state 19
    var_dec_fl                     shift and go to state 12
    arr_dec                        shift and go to state 25
    assign_expr                    shift and go to state 14
    statement                      shift and go to state 26
    arr_print                      shift and go to state 7
    var_dec_st                     shift and go to state 8
    if_statement                   shift and go to state 17
    ip_statement                   shift and go to state 9

state 2

    (11) statement -> arr_push .

    ENDIF           reduce using rule 11 (statement -> arr_push .)
    NAME            reduce using rule 11 (statement -> arr_push .)
    IF              reduce using rule 11 (statement -> arr_push .)
    WHILE           reduce using rule 11 (statement -> arr_push .)
    INPUTDEC        reduce using rule 11 (statement -> arr_push .)
    PRINT           reduce using rule 11 (statement -> arr_push .)
    PUSH            reduce using rule 11 (statement -> arr_push .)
    PRINTARRAY      reduce using rule 11 (statement -> arr_push .)
    NEWLINE         reduce using rule 11 (statement -> arr_push .)
    $end            reduce using rule 11 (statement -> arr_push .)
    ENDELSE         reduce using rule 11 (statement -> arr_push .)
    ENDWHILE        reduce using rule 11 (statement -> arr_push .)


state 3

    (7) statement -> wh_statement .

    ENDIF           reduce using rule 7 (statement -> wh_statement .)
    NAME            reduce using rule 7 (statement -> wh_statement .)
    IF              reduce using rule 7 (statement -> wh_statement .)
    WHILE           reduce using rule 7 (statement -> wh_statement .)
    INPUTDEC        reduce using rule 7 (statement -> wh_statement .)
    PRINT           reduce using rule 7 (statement -> wh_statement .)
    PUSH            reduce using rule 7 (statement -> wh_statement .)
    PRINTARRAY      reduce using rule 7 (statement -> wh_statement .)
    NEWLINE         reduce using rule 7 (statement -> wh_statement .)
    $end            reduce using rule 7 (statement -> wh_statement .)
    ENDELSE         reduce using rule 7 (statement -> wh_statement .)
    ENDWHILE        reduce using rule 7 (statement -> wh_statement .)


state 4

    (29) pr_statement -> PRINT . outputblock ENDPRINT
    (31) outputblock -> . outputblock expression
    (32) outputblock -> . outputblock STRING
    (33) outputblock -> . outputblock comparison
    (34) outputblock -> . outputblock LZDIGIT
    (35) outputblock -> . expression
    (36) outputblock -> . STRING
    (37) outputblock -> . comparison
    (38) outputblock -> . LZDIGIT
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression TIMES expression
    (56) expression -> . expression FDIVIDE expression
    (57) expression -> . expression DIVIDE expression
    (58) expression -> . expression MODULO expression
    (59) expression -> . expression POWER expression
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . MINUS expression
    (62) expression -> . INT
    (63) expression -> . FLOAT
    (64) expression -> . LZWORD
    (65) expression -> . NAME
    (66) expression -> . NAME LBRACKET expression RBRACKET
    (69) expression -> . POP NAME
    (70) expression -> . TOP NAME
    (72) expression -> . ARRLEN NAME
    (42) comparison -> . arr_empty
    (43) comparison -> . LBRACKET comparison RBRACKET
    (44) comparison -> . expression EQUALS expression
    (45) comparison -> . expression NOTEQ expression
    (46) comparison -> . expression GREATER expression
    (47) comparison -> . expression LESS expression
    (48) comparison -> . expression GREATEREQ expression
    (49) comparison -> . expression LESSEQ expression
    (50) comparison -> . comparison AND comparison
    (51) comparison -> . comparison OR comparison
    (52) comparison -> . NOT comparison
    (71) arr_empty -> . ISEMPTY NAME

    STRING          shift and go to state 31
    LZDIGIT         shift and go to state 33
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    LZWORD          shift and go to state 38
    NAME            shift and go to state 40
    POP             shift and go to state 34
    TOP             shift and go to state 27
    ARRLEN          shift and go to state 36
    LBRACKET        shift and go to state 29
    NOT             shift and go to state 43
    ISEMPTY         shift and go to state 35

    comparison                     shift and go to state 39
    expression                     shift and go to state 44
    outputblock                    shift and go to state 32
    arr_empty                      shift and go to state 28

state 5

    (41) wh_statement -> WHILE . LBRACKET comparison RBRACKET statements ENDWHILE

    LBRACKET        shift and go to state 45


state 6

    (28) ip_statement -> INPUTDEC . NAME

    NAME            shift and go to state 46


state 7

    (12) statement -> arr_print .

    ENDIF           reduce using rule 12 (statement -> arr_print .)
    NAME            reduce using rule 12 (statement -> arr_print .)
    IF              reduce using rule 12 (statement -> arr_print .)
    WHILE           reduce using rule 12 (statement -> arr_print .)
    INPUTDEC        reduce using rule 12 (statement -> arr_print .)
    PRINT           reduce using rule 12 (statement -> arr_print .)
    PUSH            reduce using rule 12 (statement -> arr_print .)
    PRINTARRAY      reduce using rule 12 (statement -> arr_print .)
    NEWLINE         reduce using rule 12 (statement -> arr_print .)
    $end            reduce using rule 12 (statement -> arr_print .)
    ENDELSE         reduce using rule 12 (statement -> arr_print .)
    ENDWHILE        reduce using rule 12 (statement -> arr_print .)


state 8

    (15) var_dec -> var_dec_st .

    ENDELSE         reduce using rule 15 (var_dec -> var_dec_st .)
    NAME            reduce using rule 15 (var_dec -> var_dec_st .)
    IF              reduce using rule 15 (var_dec -> var_dec_st .)
    WHILE           reduce using rule 15 (var_dec -> var_dec_st .)
    INPUTDEC        reduce using rule 15 (var_dec -> var_dec_st .)
    PRINT           reduce using rule 15 (var_dec -> var_dec_st .)
    PUSH            reduce using rule 15 (var_dec -> var_dec_st .)
    PRINTARRAY      reduce using rule 15 (var_dec -> var_dec_st .)
    NEWLINE         reduce using rule 15 (var_dec -> var_dec_st .)
    ENDIF           reduce using rule 15 (var_dec -> var_dec_st .)
    $end            reduce using rule 15 (var_dec -> var_dec_st .)
    ENDWHILE        reduce using rule 15 (var_dec -> var_dec_st .)


state 9

    (8) statement -> ip_statement .

    ENDIF           reduce using rule 8 (statement -> ip_statement .)
    NAME            reduce using rule 8 (statement -> ip_statement .)
    IF              reduce using rule 8 (statement -> ip_statement .)
    WHILE           reduce using rule 8 (statement -> ip_statement .)
    INPUTDEC        reduce using rule 8 (statement -> ip_statement .)
    PRINT           reduce using rule 8 (statement -> ip_statement .)
    PUSH            reduce using rule 8 (statement -> ip_statement .)
    PRINTARRAY      reduce using rule 8 (statement -> ip_statement .)
    NEWLINE         reduce using rule 8 (statement -> ip_statement .)
    $end            reduce using rule 8 (statement -> ip_statement .)
    ENDELSE         reduce using rule 8 (statement -> ip_statement .)
    ENDWHILE        reduce using rule 8 (statement -> ip_statement .)


state 10

    (4) statement -> var_dec .

    ENDIF           reduce using rule 4 (statement -> var_dec .)
    NAME            reduce using rule 4 (statement -> var_dec .)
    IF              reduce using rule 4 (statement -> var_dec .)
    WHILE           reduce using rule 4 (statement -> var_dec .)
    INPUTDEC        reduce using rule 4 (statement -> var_dec .)
    PRINT           reduce using rule 4 (statement -> var_dec .)
    PUSH            reduce using rule 4 (statement -> var_dec .)
    PRINTARRAY      reduce using rule 4 (statement -> var_dec .)
    NEWLINE         reduce using rule 4 (statement -> var_dec .)
    $end            reduce using rule 4 (statement -> var_dec .)
    ENDELSE         reduce using rule 4 (statement -> var_dec .)
    ENDWHILE        reduce using rule 4 (statement -> var_dec .)


state 11

    (30) new_line -> NEWLINE .

    NAME            reduce using rule 30 (new_line -> NEWLINE .)
    IF              reduce using rule 30 (new_line -> NEWLINE .)
    WHILE           reduce using rule 30 (new_line -> NEWLINE .)
    INPUTDEC        reduce using rule 30 (new_line -> NEWLINE .)
    PRINT           reduce using rule 30 (new_line -> NEWLINE .)
    PUSH            reduce using rule 30 (new_line -> NEWLINE .)
    PRINTARRAY      reduce using rule 30 (new_line -> NEWLINE .)
    NEWLINE         reduce using rule 30 (new_line -> NEWLINE .)
    $end            reduce using rule 30 (new_line -> NEWLINE .)
    ENDELSE         reduce using rule 30 (new_line -> NEWLINE .)
    ENDWHILE        reduce using rule 30 (new_line -> NEWLINE .)
    ENDIF           reduce using rule 30 (new_line -> NEWLINE .)


state 12

    (17) var_dec -> var_dec_fl .

    ENDELSE         reduce using rule 17 (var_dec -> var_dec_fl .)
    NAME            reduce using rule 17 (var_dec -> var_dec_fl .)
    IF              reduce using rule 17 (var_dec -> var_dec_fl .)
    WHILE           reduce using rule 17 (var_dec -> var_dec_fl .)
    INPUTDEC        reduce using rule 17 (var_dec -> var_dec_fl .)
    PRINT           reduce using rule 17 (var_dec -> var_dec_fl .)
    PUSH            reduce using rule 17 (var_dec -> var_dec_fl .)
    PRINTARRAY      reduce using rule 17 (var_dec -> var_dec_fl .)
    NEWLINE         reduce using rule 17 (var_dec -> var_dec_fl .)
    ENDIF           reduce using rule 17 (var_dec -> var_dec_fl .)
    $end            reduce using rule 17 (var_dec -> var_dec_fl .)
    ENDWHILE        reduce using rule 17 (var_dec -> var_dec_fl .)


state 13

    (0) S' -> start .



state 14

    (10) statement -> assign_expr .

    ENDIF           reduce using rule 10 (statement -> assign_expr .)
    NAME            reduce using rule 10 (statement -> assign_expr .)
    IF              reduce using rule 10 (statement -> assign_expr .)
    WHILE           reduce using rule 10 (statement -> assign_expr .)
    INPUTDEC        reduce using rule 10 (statement -> assign_expr .)
    PRINT           reduce using rule 10 (statement -> assign_expr .)
    PUSH            reduce using rule 10 (statement -> assign_expr .)
    PRINTARRAY      reduce using rule 10 (statement -> assign_expr .)
    NEWLINE         reduce using rule 10 (statement -> assign_expr .)
    $end            reduce using rule 10 (statement -> assign_expr .)
    ENDELSE         reduce using rule 10 (statement -> assign_expr .)
    ENDWHILE        reduce using rule 10 (statement -> assign_expr .)


state 15

    (3) statements -> statement .

    ENDWHILE        reduce using rule 3 (statements -> statement .)
    NAME            reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    INPUTDEC        reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    PUSH            reduce using rule 3 (statements -> statement .)
    PRINTARRAY      reduce using rule 3 (statements -> statement .)
    NEWLINE         reduce using rule 3 (statements -> statement .)
    ENDIF           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    ENDELSE         reduce using rule 3 (statements -> statement .)


state 16

    (67) arr_push -> PUSH . NAME expression ENDPUSH

    NAME            shift and go to state 47


state 17

    (5) statement -> if_statement .

    ENDIF           reduce using rule 5 (statement -> if_statement .)
    NAME            reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    INPUTDEC        reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    PUSH            reduce using rule 5 (statement -> if_statement .)
    PRINTARRAY      reduce using rule 5 (statement -> if_statement .)
    NEWLINE         reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    ENDELSE         reduce using rule 5 (statement -> if_statement .)
    ENDWHILE        reduce using rule 5 (statement -> if_statement .)


state 18

    (6) statement -> ifel_statement .

    ENDIF           reduce using rule 6 (statement -> ifel_statement .)
    NAME            reduce using rule 6 (statement -> ifel_statement .)
    IF              reduce using rule 6 (statement -> ifel_statement .)
    WHILE           reduce using rule 6 (statement -> ifel_statement .)
    INPUTDEC        reduce using rule 6 (statement -> ifel_statement .)
    PRINT           reduce using rule 6 (statement -> ifel_statement .)
    PUSH            reduce using rule 6 (statement -> ifel_statement .)
    PRINTARRAY      reduce using rule 6 (statement -> ifel_statement .)
    NEWLINE         reduce using rule 6 (statement -> ifel_statement .)
    $end            reduce using rule 6 (statement -> ifel_statement .)
    ENDELSE         reduce using rule 6 (statement -> ifel_statement .)
    ENDWHILE        reduce using rule 6 (statement -> ifel_statement .)


state 19

    (9) statement -> pr_statement .

    ENDIF           reduce using rule 9 (statement -> pr_statement .)
    NAME            reduce using rule 9 (statement -> pr_statement .)
    IF              reduce using rule 9 (statement -> pr_statement .)
    WHILE           reduce using rule 9 (statement -> pr_statement .)
    INPUTDEC        reduce using rule 9 (statement -> pr_statement .)
    PRINT           reduce using rule 9 (statement -> pr_statement .)
    PUSH            reduce using rule 9 (statement -> pr_statement .)
    PRINTARRAY      reduce using rule 9 (statement -> pr_statement .)
    NEWLINE         reduce using rule 9 (statement -> pr_statement .)
    $end            reduce using rule 9 (statement -> pr_statement .)
    ENDELSE         reduce using rule 9 (statement -> pr_statement .)
    ENDWHILE        reduce using rule 9 (statement -> pr_statement .)


state 20

    (13) statement -> new_line .

    ENDIF           reduce using rule 13 (statement -> new_line .)
    NAME            reduce using rule 13 (statement -> new_line .)
    IF              reduce using rule 13 (statement -> new_line .)
    WHILE           reduce using rule 13 (statement -> new_line .)
    INPUTDEC        reduce using rule 13 (statement -> new_line .)
    PRINT           reduce using rule 13 (statement -> new_line .)
    PUSH            reduce using rule 13 (statement -> new_line .)
    PRINTARRAY      reduce using rule 13 (statement -> new_line .)
    NEWLINE         reduce using rule 13 (statement -> new_line .)
    $end            reduce using rule 13 (statement -> new_line .)
    ENDELSE         reduce using rule 13 (statement -> new_line .)
    ENDWHILE        reduce using rule 13 (statement -> new_line .)


state 21

    (39) if_statement -> IF . LBRACKET comparison RBRACKET statements ENDIF
    (40) ifel_statement -> IF . LBRACKET comparison RBRACKET statements ENDIF ELSE statements ENDELSE

    LBRACKET        shift and go to state 48


state 22

    (73) statement -> NAME . LBRACKET expression RBRACKET ASSIGN expression
    (14) assign_expr -> NAME . ASSIGN expression
    (19) var_dec_st -> NAME . ASSIGN STRINGDEC STRING
    (20) var_dec_in -> NAME . ASSIGN INTDEC expression
    (21) var_dec_fl -> NAME . ASSIGN FLOATDEC expression
    (22) arr_dec -> NAME . ASSIGN LBRACKET arr_param RBRACKET
    (23) arr_dec -> NAME . ASSIGN LBRACKET RBRACKET

    LBRACKET        shift and go to state 49
    ASSIGN          shift and go to state 50


state 23

    (16) var_dec -> var_dec_in .

    ENDELSE         reduce using rule 16 (var_dec -> var_dec_in .)
    NAME            reduce using rule 16 (var_dec -> var_dec_in .)
    IF              reduce using rule 16 (var_dec -> var_dec_in .)
    WHILE           reduce using rule 16 (var_dec -> var_dec_in .)
    INPUTDEC        reduce using rule 16 (var_dec -> var_dec_in .)
    PRINT           reduce using rule 16 (var_dec -> var_dec_in .)
    PUSH            reduce using rule 16 (var_dec -> var_dec_in .)
    PRINTARRAY      reduce using rule 16 (var_dec -> var_dec_in .)
    NEWLINE         reduce using rule 16 (var_dec -> var_dec_in .)
    ENDIF           reduce using rule 16 (var_dec -> var_dec_in .)
    $end            reduce using rule 16 (var_dec -> var_dec_in .)
    ENDWHILE        reduce using rule 16 (var_dec -> var_dec_in .)


state 24

    (68) arr_print -> PRINTARRAY . NAME

    NAME            shift and go to state 51


state 25

    (18) var_dec -> arr_dec .

    ENDELSE         reduce using rule 18 (var_dec -> arr_dec .)
    NAME            reduce using rule 18 (var_dec -> arr_dec .)
    IF              reduce using rule 18 (var_dec -> arr_dec .)
    WHILE           reduce using rule 18 (var_dec -> arr_dec .)
    INPUTDEC        reduce using rule 18 (var_dec -> arr_dec .)
    PRINT           reduce using rule 18 (var_dec -> arr_dec .)
    PUSH            reduce using rule 18 (var_dec -> arr_dec .)
    PRINTARRAY      reduce using rule 18 (var_dec -> arr_dec .)
    NEWLINE         reduce using rule 18 (var_dec -> arr_dec .)
    ENDIF           reduce using rule 18 (var_dec -> arr_dec .)
    $end            reduce using rule 18 (var_dec -> arr_dec .)
    ENDWHILE        reduce using rule 18 (var_dec -> arr_dec .)


state 26

    (2) statements -> statements statement .

    ENDWHILE        reduce using rule 2 (statements -> statements statement .)
    NAME            reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    INPUTDEC        reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    PUSH            reduce using rule 2 (statements -> statements statement .)
    PRINTARRAY      reduce using rule 2 (statements -> statements statement .)
    NEWLINE         reduce using rule 2 (statements -> statements statement .)
    ENDIF           reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    ENDELSE         reduce using rule 2 (statements -> statements statement .)


state 27

    (70) expression -> TOP . NAME

    NAME            shift and go to state 52


state 28

    (42) comparison -> arr_empty .

    RBRACKET        reduce using rule 42 (comparison -> arr_empty .)
    AND             reduce using rule 42 (comparison -> arr_empty .)
    OR              reduce using rule 42 (comparison -> arr_empty .)
    ENDPRINT        reduce using rule 42 (comparison -> arr_empty .)
    STRING          reduce using rule 42 (comparison -> arr_empty .)
    LZDIGIT         reduce using rule 42 (comparison -> arr_empty .)
    LPAREN          reduce using rule 42 (comparison -> arr_empty .)
    MINUS           reduce using rule 42 (comparison -> arr_empty .)
    INT             reduce using rule 42 (comparison -> arr_empty .)
    FLOAT           reduce using rule 42 (comparison -> arr_empty .)
    LZWORD          reduce using rule 42 (comparison -> arr_empty .)
    NAME            reduce using rule 42 (comparison -> arr_empty .)
    POP             reduce using rule 42 (comparison -> arr_empty .)
    TOP             reduce using rule 42 (comparison -> arr_empty .)
    ARRLEN          reduce using rule 42 (comparison -> arr_empty .)
    LBRACKET        reduce using rule 42 (comparison -> arr_empty .)
    NOT             reduce using rule 42 (comparison -> arr_empty .)
    ISEMPTY         reduce using rule 42 (comparison -> arr_empty .)


state 29

    (43) comparison -> LBRACKET . comparison RBRACKET
    (42) comparison -> . arr_empty
    (43) comparison -> . LBRACKET comparison RBRACKET
    (44) comparison -> . expression EQUALS expression
    (45) comparison -> . expression NOTEQ expression
    (46) comparison -> . expression GREATER expression
    (47) comparison -> . expression LESS expression
    (48) comparison -> . expression GREATEREQ expression
    (49) comparison -> . expression LESSEQ expression
    (50) comparison -> . comparison AND comparison
    (51) comparison -> . comparison OR comparison
    (52) comparison -> . NOT comparison
    (71) arr_empty -> . ISEMPTY NAME
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression TIMES expression
    (56) expression -> . expression FDIVIDE expression
    (57) expression -> . expression DIVIDE expression
    (58) expression -> . expression MODULO expression
    (59) expression -> . expression POWER expression
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . MINUS expression
    (62) expression -> . INT
    (63) expression -> . FLOAT
    (64) expression -> . LZWORD
    (65) expression -> . NAME
    (66) expression -> . NAME LBRACKET expression RBRACKET
    (69) expression -> . POP NAME
    (70) expression -> . TOP NAME
    (72) expression -> . ARRLEN NAME

    LBRACKET        shift and go to state 29
    NOT             shift and go to state 43
    ISEMPTY         shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    LZWORD          shift and go to state 38
    NAME            shift and go to state 40
    POP             shift and go to state 34
    TOP             shift and go to state 27
    ARRLEN          shift and go to state 36

    comparison                     shift and go to state 53
    expression                     shift and go to state 54
    arr_empty                      shift and go to state 28

state 30

    (61) expression -> MINUS . expression
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression TIMES expression
    (56) expression -> . expression FDIVIDE expression
    (57) expression -> . expression DIVIDE expression
    (58) expression -> . expression MODULO expression
    (59) expression -> . expression POWER expression
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . MINUS expression
    (62) expression -> . INT
    (63) expression -> . FLOAT
    (64) expression -> . LZWORD
    (65) expression -> . NAME
    (66) expression -> . NAME LBRACKET expression RBRACKET
    (69) expression -> . POP NAME
    (70) expression -> . TOP NAME
    (72) expression -> . ARRLEN NAME

    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    LZWORD          shift and go to state 38
    NAME            shift and go to state 40
    POP             shift and go to state 34
    TOP             shift and go to state 27
    ARRLEN          shift and go to state 36

    expression                     shift and go to state 55

state 31

    (36) outputblock -> STRING .
